# energy-uy

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
scripts/: run_pipeline.py
src/analysis/: indicators.py
src/connectors/: adme_generacion_mensual.py  adme_precio_spot.py  adme_scada.py  base.py  ute_bajadas.py
src/dashboard/: health_check.py  pipeline_runner.py  styles.py
src/dashboard/components/: charts_tab.py  kpi_cards.py  linkedin_panel.py
src/editorial/: findings.py  renderer.py
src/editorial/templates/: linkedin_post.j2
src/processing/: cleaner.py  transformer.py
src/storage/: database.py  models.py  repository.py
src/visualization/: charts.py  editorial_export.py  exporter.py  style.py
tests/: test_adme_generacion_mensual.py  test_adme_precio_spot.py  test_adme_scada.py  test_analysis.py  test_processing.py  test_storage.py
