[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-uy"
version = "0.1.0"
description = "Pipeline de datos del sistema eléctrico uruguayo para visualización y contenido LinkedIn"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "odfpy>=1.4",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
    "plotly>=5.18",
    "matplotlib>=3.8.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
playwright = [
    "playwright>=1.44",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
